[package]
name = "challange"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
abigen = { version = "0.1.0", path = "../abigen" }
clap = { version = "4.0.0", default-features = false, features = ["std", "help"] }
dotenv = "0.15.0"
ethers.workspace = true
serde_json.workspace = true
tokio.workspace = true
